@@ -307,3 +307,4 @@ Issue #2146411 by johnv: Reverted cache for workflow_node_current_state.
 Issue #2137149 by johnv: Fixed double code in Transition->execute().
 Issue #2146411 by johnv: Fixed workflow_node_previous_state.
 Issue #2065799 by johnv: Added WorkflowState->count() to count nodes per State.
+Issue #2137149 by johnv: Changed 'workflow_options' to 'workflow_sid' in workflow_transition_form().
